--- a/.github/workflows/marp.yml
+++ b/.github/workflows/marp.yml
@@ -30,18 +30,6 @@ jobs:
           cp fonts/MyanmarSanpya.ttf ~/.fonts/
           fc-cache -f -v
 
-      - name: Export slides to HTML and PDF
-        run: |
-          mkdir dist
-          marp SLIDES.md --html --output dist/index.html
-          marp SLIDES.md --pdf --output dist/slides.pdf
-
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v4
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
-
       - name: Get timestamp + optional Git tag
         id: version
         run: |
@@ -51,11 +39,25 @@ jobs:
           [ -n "$TAG" ] && VERSION="${VERSION}-${TAG}"
           echo "tag=$VERSION" >> $GITHUB_OUTPUT
 
+      - name: Export slides to HTML and PDF
+        run: |
+          mkdir dist
+          PDF="dist/slides-${{ steps.version.outputs.tag }}.pdf"
+          marp SLIDES.md --html --output dist/index.html
+          marp SLIDES.md --pdf --output "$PDF"
+
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
+
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ steps.version.outputs.tag }}
-          files: dist/slides.pdf
+          files: dist/slides-${{ steps.version.outputs.tag }}.pdf
           draft: true             # ← Set `false` to publish immediately
           prerelease: false       # ← Set `true` if tagging nightly builds
         env:
